
capnp-ocaml 2.0.0
-----------------
* Instantiate `BytesMessage = Message.Make(BytesStorage)`, so the user doesn't always
  need to.
* Module `Codecs`: change API to accept the more natural `BytesMessage.Message.t`
  instead of `Bytes.t list`.
* New module `IO`: functions for moving message data through various types of I/O
  channels.
* Compiler now says something about files it created.
* Module `Codecs`: correct a packing inefficiency with literal bytes.
* Module `Codecs`: fix infinite loop in `PackedStream` decoding.

capnp-ocaml 1.0.1
-----------------
* Avoid use of GNU `install` features in `omake install`.  This corrects installation
  problems on OS X and (most likely) other BSDs.

capnp-ocaml 1.0.0
-----------------
* Initial release.
