@@ -5,11 +5,12 @@ capnp-ocaml 2.0.0
   need to.
 * Module `Codecs`: change API to accept the more natural `BytesMessage.Message.t`
   instead of `Bytes.t list`.
+* Module `Codecs`: correct a packing inefficiency with literal bytes.
+* Module `Codecs`: fix incorrect encoding of framing headers (e.g. `serialize`).
+* Module `Codecs`: fix infinite loop in `PackedStream` decoding.
 * New module `IO`: functions for moving message data through various types of I/O
   channels.
 * Compiler now says something about files it created.
-* Module `Codecs`: correct a packing inefficiency with literal bytes.
-* Module `Codecs`: fix infinite loop in `PackedStream` decoding.
 
 capnp-ocaml 1.0.1
 -----------------
